objects/CN_Contract__c.object
<CustomObject>
    <fields>
        <fullName>CN_Account_Code__c</fullName>
        <label>Account Code</label>
        <length>50</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>CN_Account_Name__c</fullName>
        <label>Account Name</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>CN_Affiliates__c</fullName>
        <label>Affiliates</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>CN_BU__c</fullName>
        <label>BU</label>
        <type>Picklist</type>
        <valueSet>
            <restricted>true</restricted>
            <valueSetDefinition>
                <value>
                    <fullName>Food Service</fullName>
                    <default>true</default>
                    <label>Food Service</label>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>CN_Certificate_Number_of_Guarantor__c</fullName>
        <label>Certificate Number of Guarantor</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>CN_Certificate_Type_of_Guarantor__c</fullName>
        <label>Certificate Type of Guarantor</label>
        <type>Picklist</type>
        <valueSet>
            <restricted>true</restricted>
            <valueSetDefinition>
                <value>
                    <fullName>身份证</fullName>
                </value>
                <value>
                    <fullName>护照</fullName>
                </value>
                <value>
                    <fullName>军官证</fullName>
                </value>
                <value>
                    <fullName>士官证</fullName>
                </value>
                <value>
                    <fullName>港澳通行证</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>CN_Conditional_Rebate_Note1__c</fullName>
        <label>Conditional Rebate Note1</label>
        <length>32768</length>
        <type>LongTextArea</type>
    </fields>
    <fields>
        <fullName>CN_Conditional_Rebate_Note2__c</fullName>
        <label>Conditional Rebate Note2</label>
        <length>32768</length>
        <type>LongTextArea</type>
    </fields>
    <fields>
        <fullName>CN_Conditional_Rebate_Note3__c</fullName>
        <label>Conditional Rebate Note3</label>
        <length>32768</length>
        <type>LongTextArea</type>
    </fields>
    <fields>
        <fullName>CN_Contract_Number__c</fullName>
        <label>Contract Number</label>
        <length>16</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>CN_Contract_Status__c</fullName>
        <label>Contract Status</label>
        <type>Picklist</type>
        <valueSet>
            <restricted>true</restricted>
            <valueSetDefinition>
                <value>
                    <fullName>准备中</fullName>
                </value>
                <value>
                    <fullName>有效</fullName>
                </value>
                <value>
                    <fullName>终止</fullName>
                </value>
                <value>
                    <fullName>续签</fullName>
                </value>
                <value>
                    <fullName>作废</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>CN_Contract_Type__c</fullName>
        <label>Contract Type</label>
        <type>Picklist</type>
        <valueSet>
            <restricted>true</restricted>
            <valueSetDefinition>
                <value>
                    <fullName>标准版本</fullName>
                </value>
                <value>
                    <fullName>“法人”担保人</fullName>
                </value>
                <value>
                    <fullName>非“法人”担保人</fullName>
                </value>
                <value>
                    <fullName>关联公司担保</fullName>
                </value>
                <value>
                    <fullName>与经销商的2方合同</fullName>
                </value>
                <value>
                    <fullName>与经销商/终端的3方合同</fullName>
                </value>
                <value>
                    <fullName>三方转让协议</fullName>
                </value>
                <value>
                    <fullName>业主为酒店担保</fullName>
                </value>
                <value>
                    <fullName>补充协议</fullName>
                </value>
                <value>
                    <fullName>采购协议-客户版本</fullName>
                </value>
                <value>
                    <fullName>赞助合同</fullName>
                </value>
                <value>
                    <fullName>服务合同</fullName>
                </value>
                <value>
                    <fullName>单品合同</fullName>
                </value>
                <value>
                    <fullName>返利合同</fullName>
                </value>
                <value>
                    <fullName>预付定金</fullName>
                </value>
                <value>
                    <fullName>预付款合同</fullName>
                </value>
                <value>
                    <fullName>BSI合同</fullName>
                </value>
                <value>
                    <fullName>Gerard合同</fullName>
                </value>
                <value>
                    <fullName>商品销售协议</fullName>
                </value>
                <value>
                    <fullName>现结合同- 客户要求</fullName>
                </value>
                <value>
                    <fullName>机器赞助合同</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>CN_Customer_Contract_Number__c</fullName>
        <label>Customer Contract Number</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>CN_Customer_Remark__c</fullName>
        <label>Customer Remark</label>
        <length>32768</length>
        <type>LongTextArea</type>
    </fields>
    <fields>
        <fullName>CN_Direct_Account_Code__c</fullName>
        <formula>CN_Direct_Account_Name__r.CN_Customer_Code__c</formula>
        <label>Direct Account Code</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>CN_Direct_Account_Name__c</fullName>
        <label>Direct Account Name</label>
        <referenceTo>Account</referenceTo>
        <relationshipLabel>Contracts</relationshipLabel>
        <relationshipName>Contracts</relationshipName>
        <relationshipOrder>0</relationshipOrder>
        <type>MasterDetail</type>
        <writeRequiresMasterRead>true</writeRequiresMasterRead>
    </fields>
    <fields>
        <fullName>CN_Document_Number__c</fullName>
        <label>Document Number</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>CN_End_Date__c</fullName>
        <label>End Date</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>CN_Finance_Remark__c</fullName>
        <label>Finance Remark</label>
        <length>32768</length>
        <type>LongTextArea</type>
    </fields>
    <fields>
        <fullName>CN_Guarantor__c</fullName>
        <label>Guarantor</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>CN_If_Need_Populate_Account_Name__c</fullName>
        <formula>OR(
  CN_Account_Code__c != CN_Direct_Account_Name__r.CN_Customer_Code__c,
  CN_Account_Name__c !=  CN_Direct_Account_Name__r.Name 
)</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>If Need Populate Account Name</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>CN_Indirect_Account_Name__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>Indirect Account Name</label>
        <referenceTo>Account</referenceTo>
        <relationshipLabel>Contracts (Indirect Account Name)</relationshipLabel>
        <relationshipName>Contracts1</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>CN_Indirect_Account_TEXT__c</fullName>
        <label>Indirect Account Name</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>CN_Internal_Contract_Number__c</fullName>
        <label>Internal Contract Number</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>CN_Internal_Employee__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>Internal Employee</label>
        <referenceTo>CN_Internal_Employee__c</referenceTo>
        <relationshipLabel>Contracts</relationshipLabel>
        <relationshipName>Contracts</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>CN_Invoice_Submission_Date__c</fullName>
        <label>Invoice Submission Date</label>
        <length>50</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>CN_Original_Contract_Return_Date__c</fullName>
        <label>Original Contract Return Date</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>CN_Payment_Date__c</fullName>
        <label>Payment Date</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>CN_Payment_Term__c</fullName>
        <label>Payment Term</label>
        <type>Picklist</type>
        <valueSet>
            <restricted>true</restricted>
            <valueSetDefinition>
                <value>
                    <fullName>CIA</fullName>
                </value>
                <value>
                    <fullName>D000</fullName>
                </value>
                <value>
                    <fullName>D003</fullName>
                </value>
                <value>
                    <fullName>D005</fullName>
                </value>
                <value>
                    <fullName>D010</fullName>
                </value>
                <value>
                    <fullName>D015</fullName>
                </value>
                <value>
                    <fullName>D030</fullName>
                </value>
                <value>
                    <fullName>D045</fullName>
                </value>
                <value>
                    <fullName>D060</fullName>
                </value>
                <value>
                    <fullName>D075</fullName>
                </value>
                <value>
                    <fullName>D090</fullName>
                </value>
                <value>
                    <fullName>D120</fullName>
                </value>
                <value>
                    <fullName>M110</fullName>
                </value>
                <value>
                    <fullName>M115</fullName>
                </value>
                <value>
                    <fullName>M120</fullName>
                </value>
                <value>
                    <fullName>M131</fullName>
                </value>
                <value>
                    <fullName>M145</fullName>
                </value>
                <value>
                    <fullName>M231</fullName>
                </value>
                <value>
                    <fullName>M331</fullName>
                </value>
                <value>
                    <fullName>D020</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>CN_Rebate_Amount__c</fullName>
        <label>Rebate Amount</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>CN_Rebate_Conditions1__c</fullName>
        <label>Rebate Conditions1</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>CN_Rebate_Conditions2__c</fullName>
        <label>Rebate Conditions2</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>CN_Rebate_Conditions3__c</fullName>
        <label>Rebate Conditions3</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>CN_Rebate_End_Date1__c</fullName>
        <label>Rebate End Date1</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>CN_Rebate_End_Date2__c</fullName>
        <label>Rebate End Date2</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>CN_Rebate_End_Date3__c</fullName>
        <label>Rebate End Date3</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>CN_Rebate_Period1__c</fullName>
        <label>Rebate 1</label>
        <type>Picklist</type>
        <valueSet>
            <restricted>true</restricted>
            <valueSetDefinition>
                <value>
                    <fullName>月度</fullName>
                </value>
                <value>
                    <fullName>季度</fullName>
                </value>
                <value>
                    <fullName>半年度</fullName>
                </value>
                <value>
                    <fullName>年度</fullName>
                </value>
                <value>
                    <fullName>指定时间</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>CN_Rebate_Period2__c</fullName>
        <label>Rebate 2</label>
        <type>Picklist</type>
        <valueSet>
            <restricted>true</restricted>
            <valueSetDefinition>
                <value>
                    <fullName>月度</fullName>
                </value>
                <value>
                    <fullName>季度</fullName>
                </value>
                <value>
                    <fullName>半年度</fullName>
                </value>
                <value>
                    <fullName>年度</fullName>
                </value>
                <value>
                    <fullName>指定时间</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>CN_Rebate_Period3__c</fullName>
        <label>Rebate 3</label>
        <type>Picklist</type>
        <valueSet>
            <restricted>true</restricted>
            <valueSetDefinition>
                <value>
                    <fullName>月度</fullName>
                </value>
                <value>
                    <fullName>季度</fullName>
                </value>
                <value>
                    <fullName>半年度</fullName>
                </value>
                <value>
                    <fullName>年度</fullName>
                </value>
                <value>
                    <fullName>指定时间</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>CN_Rebate_Start_Date1__c</fullName>
        <label>Rebate Start Date1</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>CN_Rebate_Start_Date2__c</fullName>
        <label>Rebate Start Date2</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>CN_Rebate_Start_Date3__c</fullName>
        <label>Rebate Start Date3</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>CN_Rebate_Type__c</fullName>
        <label>Rebate Type</label>
        <type>Picklist</type>
        <valueSet>
            <restricted>true</restricted>
            <valueSetDefinition>
                <value>
                    <fullName>客户提供发票</fullName>
                </value>
                <value>
                    <fullName>票扣</fullName>
                </value>
                <value>
                    <fullName>红票</fullName>
                </value>
                <value>
                    <fullName>转账</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>CN_Reconciliation_Date__c</fullName>
        <label>Reconciliation Date</label>
        <length>50</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>CN_Reference_Day__c</fullName>
        <label>Reference Day</label>
        <type>Picklist</type>
        <valueSet>
            <restricted>true</restricted>
            <valueSetDefinition>
                <value>
                    <fullName>发票日</fullName>
                </value>
                <value>
                    <fullName>送货日</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>CN_Review_Date__c</fullName>
        <label>Review Date</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>CN_Sales_Channel__c</fullName>
        <label>Sales Channel</label>
        <type>Picklist</type>
        <valueSet>
            <restricted>true</restricted>
            <valueSetDefinition>
                <value>
                    <fullName>DS</fullName>
                </value>
                <value>
                    <fullName>KA</fullName>
                </value>
                <value>
                    <fullName>WS</fullName>
                </value>
                <value>
                    <fullName>BSI</fullName>
                </value>
                <value>
                    <fullName>Gerard</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>CN_Sales_Office__c</fullName>
        <label>Sales Office</label>
        <type>Picklist</type>
        <valueSet>
            <restricted>true</restricted>
            <valueSetDefinition>
                <value>
                    <fullName>Shanghai</fullName>
                </value>
                <value>
                    <fullName>Beijing</fullName>
                </value>
                <value>
                    <fullName>Shenzhen</fullName>
                </value>
                <value>
                    <fullName>Guangzhou</fullName>
                </value>
                <value>
                    <fullName>Chengdu</fullName>
                </value>
                <value>
                    <fullName>Tianjin</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>CN_Sales_People__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>Sales People</label>
        <referenceTo>User</referenceTo>
        <relationshipName>Contracts</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>CN_Start_Date__c</fullName>
        <label>Start Date</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>CN_Unconditional_Rebate_Note__c</fullName>
        <label>Unconditional Rebate Note</label>
        <length>32768</length>
        <type>LongTextArea</type>
    </fields>
    <fields>
        <fullName>CN_Validity_of_Guarantor_s_Certificate__c</fullName>
        <label>Validity of Guarantor&apos;s Certificate</label>
        <type>Date</type>
    </fields>
    <label>Contract</label>
    <listViews>
        <fullName>All</fullName>
        <columns>NAME</columns>
        <columns>CN_Internal_Contract_Number__c</columns>
        <columns>CN_Document_Number__c</columns>
        <columns>CN_Direct_Account_Code__c</columns>
        <columns>CN_Direct_Account_Name__c</columns>
        <columns>CN_Contract_Type__c</columns>
        <columns>CN_Sales_Channel__c</columns>
        <columns>CN_Sales_Office__c</columns>
        <columns>CN_Internal_Employee__c</columns>
        <columns>CN_Start_Date__c</columns>
        <columns>CN_End_Date__c</columns>
        <columns>CN_Contract_Status__c</columns>
        <filterScope>Everything</filterScope>
        <filters>
            <field>RECORDTYPE</field>
            <operation>equals</operation>
            <value>CN_Contract__c.CN_Contract</value>
        </filters>
        <label>All</label>
    </listViews>
    <nameField>
        <displayFormat>Contract-{000000}</displayFormat>
        <label>Contract Number</label>
        <type>AutoNumber</type>
    </nameField>
    <pluralLabel>Contracts</pluralLabel>
    <recordTypes>
        <fullName>CN_Contract</fullName>
        <active>true</active>
        <label>CN Contract</label>
    </recordTypes>
    <sharingModel>ControlledByParent</sharingModel>
    <validationRules>
        <fullName>CN_Check_Start_Date</fullName>
        <active>false</active>
        <errorConditionFormula>AND(
  $Setup.Trigger_Switcher_Setting__c.EnableValidationRule__c,
  RecordType.DeveloperName = &apos;CN_Contract&apos;,
  CN_Start_Date__c &lt; TODAY()
)</errorConditionFormula>
        <errorDisplayField>CN_Start_Date__c</errorDisplayField>
        <errorMessage>Start date should be later than today</errorMessage>
    </validationRules>
</CustomObject>